<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">B07 Demo Summer 2024</string>
    <string name="upload_edit_delete">Upload, Edit, or Delete documents here</string>
    <string name="upload_to_firebase">Upload change to Firebase</string>
    <string name="choose_action">Please choose your next move:</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="indicate_categories">Please indicate your data categories</string>
    <string name="documents">Documents to pack</string>
    <string name="contacts">Emergency contacts</string>
    <string name="locations">Safe locations</string>
    <string name="medications">Medications</string>
    <string name="please_choose_your_next_move">Please choose your next move:</string>
    <string name="add_file">Add File</string>
    <string name="edit_file">Edit File</string>
    <string name="delete_file">Delete File</string>
    <string name="please_indicate_your_data_categories">Please indicate your data categories</string>
    <string name="documents_to_pack">Documents to pack</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="safe_locations">Safe locations</string>
    <string name="medications_">Medications</string>
    <string name="upload_edit_or_delete_documents_here">Upload, Edit, or Delete documents here</string>
    <string name="upload_change_to_firebase">Upload change to Firebase</string>
    <string name="scroller">scroller</string>
    <string name="spinner">spinner</string>
    <string name="manage_items">manage_items</string>
    <string name="recyclerview">recyclerview</string>
    <string name="add_item">add_item</string>
    <string name="delete_item">delete_item</string>
    <string name="back">back</string>
    <string name="select_file_to_upload">Select File to Upload</string>
    <string name="upload_file_to_firebase">Upload File to Firebase</string>
    <string name="no_file_selected_yet">No file selected yet.</string>
    <string name="upload_file">Upload File</string>
    <string name="document_name">Document Name</string>
    <string name="open_document">Open Document</string>
    <string name="delete_document">Delete Document</string>
    <string name="sample_document">Sample Document</string>


    <string-array name="warmup_array">
        <item>Which best describes your situation?</item>
        <item>What city do you live in?</item>
        <item>Which room in your home feels the safest if you need to get away quickly?</item>
        <item>Who do you live with?</item>
        <item>Do you have children?</item>
    </string-array>

    <string-array name="still_in_array">
        <item>Which form(s) of abuse are you experiencing?</item>
        <item>Are you recording the incidents (dates, times, details)?</item>
        <item>Name one person you can call immediately in an emergency.</item>
    </string-array>

    <string-array name="plan_leave_array">
        <item>When do you plan to leave?</item>
        <item>Do you have a go-bag packed with essentials?</item>
        <item>Where do you keep emergency cash or cards?</item>
        <item>Have you identified a safe place to stay?</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="monthly_dates">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>
    <string name="channel_name">Safety Reminders</string>
    <string name="channel_description">Time-sensitive alerts about your safety plan</string>


</resources>
    <string-array name="post_array">
        <item>Has the abuser continued any contact?</item>
        <item>Do you have a protection order? If yes, which type?</item>
        <item>Are you using any safety tools (cameras, door alarms)?</item>
        <item>Have you identified a safe place to stay?</item>
    </string-array>

    <string-array name="follow_up_array">
        <item>Which type of support would help most right now?</item>
    </string-array>
</resources>
